<resources>
    <string name="app_name">My Workout Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Fechar</string>

    <!-- Icons -->
    <string name="icon_start_exercise">{fa-play}</string>
    <string name="icon_missing_exercise_image">{fa-window-close}</string>

    <!-- Login Activity -->
    <string name="email_label">E-mail</string>
    <string name="password_label">Senha</string>
    <string name="login_label">Entrar</string>
    <string name="forgot_password_label">Esqueceu sua senha?</string>

    <!-- Forgot Password Activity -->
    <string name="recover_password__instructions_label">Insira seu e-mail cadastrado no sistema para receber instruções. Você poderá alterar sua senha clicando no link que lhe enviaremos.</string>
    <string name="recover_password_label">Recuperar senha</string>

    <!-- User Data Activity -->
    <string name="change_user_image">Toque acima para alterar sua foto.</string>
    <string name="name_label">Nome</string>
    <string name="change_password_label">Alterar Senha</string>
    <string name="current_password_label">Senha atual</string>
    <string name="new_password_label">Nova senha</string>
    <string name="confirm_password_label">Confirmar nova senha</string>

    <!-- Help Activity -->
    <string name="quit_help_button">Fechar Ajuda</string>

    <!-- About Activity -->
    <string name="about_text">O My Workout Tracker é um aplicativo que gerencia suas fichas de treino,
        medidas e peso, tornando-se uma ferramenta prática e fácil de usar na academia. Além de mostrar
        seus exercícios diários e o movimento correto de cada um deles, ele também conta com um histórico
        de peso e medidas, para que você possa ter um feedback do seu corpo sempre que necessário.
        É possível utilizá-lo instantaneamente após criar sua conta no sistema web.
    </string>

    <string name="about_text2">
        Para utilizá-lo, é necessária a criação de sua conta no Workout Tracker. Somente assim o usuário
        poderá utilizar o app, já que suas informações serão atualizadas pelo sistema web. A cada ficha
        criada no Workout Tracker o usuário deve informar seu peso, altura e medidas ao instrutor da
        academia, para que o mesmo possa criá-la.
    </string>

    <!-- Navigation Menu -->
    <string name="action_settings">Configurações</string>
    <string name="profile_icon">Ícone de Perfil</string>
    <string name="edit_user_data_text">Editar Dados</string>
    <string name="nav_item_home">Minha Ficha</string>
    <string name="nav_item_history">Meu Histórico</string>
    <string name="nav_item_calendar">Calendário</string>
    <string name="nav_title_other">Outros</string>
    <string name="nav_item_settings">Editar Dados</string>
    <string name="nav_item_help">Ajuda</string>
    <string name="nav_item_about">Sobre</string>
    <string name="nav_item_logout">Sair</string>

    <!-- Activities' Titles-->
    <string name="home_title">Ficha</string>
    <string name="history_title">Histórico</string>
    <string name="calendar_title">Calendário</string>
    <string name="forgot_password_title">Recuperação de Senha</string>
    <string name="user_data_title">Editar Dados</string>
    <string name="about_title">Sobre o My Workout Tracker</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_history</item>
        <item>@string/nav_item_calendar</item>
    </string-array>

    <string name="title_calendar">Calendário</string>
    <string name="title_history">Meu Histórico</string>
    <string name="title_home">Minha Ficha</string>

    <!-- Image Description -->
    <string name="image_exercise_description">Imagem do Exercício</string>

    <string name="forgot_password_success">O link de redefinição de senha foi enviado para o seu email.</string>

</resources>
