<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".activity.LoginActivity"
    android:theme="@style/AppTheme.NoActionBar"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:weightSum="1">

        <!--<ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_login"
            android:adjustViewBounds="true"
            android:layout_gravity="center"/>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="30sp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:id="@+id/app_title"
            fontPath="fonts/Quicksand-Light.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/loginUI"
            fontPath="fonts/Quicksand-Light.ttf" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:inputType="textWebEmailAddress"
                    android:hint="@string/email_label"
                    android:textColorHint="@android:color/tab_indicator_text"
                    android:textColor="@android:color/tab_indicator_text"
                    android:singleLine="true"
                    android:maxLines="1"
                    fontPath="fonts/Quicksand-Light.ttf" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:hint="@string/password_label"
                    android:textColorHint="@android:color/tab_indicator_text"
                    fontPath="fonts/Quicksand-Light.ttf"
                    android:textColor="@android:color/tab_indicator_text"
                    android:singleLine="true"
                    android:maxLines="1"/>
                <!--android:inputType="textPassword"-->

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_label"
                    android:textColor="@android:color/tab_indicator_text"
                    app:backgroundTint="@android:color/tab_indicator_text"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    fontPath="fonts/Quicksand-Medium.ttf" />

            </LinearLayout>

        </LinearLayout>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="@string/forgot_password_label"
        android:gravity="center"
        android:textColor="@android:color/tab_indicator_text"
        android:id="@+id/forgot_password"
        fontPath="fonts/Quicksand-Light.ttf" />

    </LinearLayout>

</RelativeLayout>