<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserDataActivity"
    android:theme="@style/AppTheme.NoActionBar"
    android:background="@drawable/login_background">

    <include layout="@layout/toolbar"
        android:id="@+id/include" />

    <LinearLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_centerHorizontal="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/user_placeholder"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/change_user_image"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:textColor="#99ffffff"
            android:textSize="13sp"/>

        <View
            android:id="@+id/imageDivider"
            android:layout_width="match_parent"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="72dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/UserDataUI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            fontPath="fonts/Quicksand-Light.ttf">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/name_label"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLines="1"
                    fontPath="fonts/Quicksand-Light.ttf" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress"
                    android:hint="@string/email_label"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLines="1"
                    fontPath="fonts/Quicksand-Light.ttf" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebPassword"
                    android:hint="@string/password_label"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLines="1"
                    fontPath="fonts/Quicksand-Light.ttf" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebPassword"
                    android:hint="@string/new_password_label"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLines="1"
                    fontPath="fonts/Quicksand-Light.ttf" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userConfirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebPassword"
                    android:hint="@string/confirm_password_label"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLines="1"
                    fontPath="fonts/Quicksand-Light.ttf" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/buttonDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/scrollView"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="?android:attr/listDivider"/>

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_below="@+id/buttonDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSaveUserData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recover_password_label"
            android:textColor="@android:color/white"
            app:backgroundTint="@android:color/white"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignParentBottom="true"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            fontPath="fonts/Quicksand-Medium.ttf" />

    </RelativeLayout>

</RelativeLayout>