<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity"
    android:theme="@style/AppTheme.NoActionBar"
    android:background="@drawable/login_background">

    <include layout="@layout/toolbar"
        android:id="@+id/include" />

    <LinearLayout
        android:id="@+id/recoverPasswordUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        fontPath="fonts/Quicksand-Light.ttf" >

        <TextView
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textSize="14sp"
            android:text="@string/recover_password__instructions_label"
            android:gravity="center"
            android:textColor="@android:color/white"
            fontPath="fonts/Quicksand-Light.ttf" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:hint="@string/email_label"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:maxLines="1"
                fontPath="fonts/Quicksand-Light.ttf" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRecoverPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recover_password_label"
            android:textColor="@android:color/white"
            app:backgroundTint="@android:color/white"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            fontPath="fonts/Quicksand-Medium.ttf" />

    </LinearLayout>

</RelativeLayout>